# Zengine

./: CMakeLists.txt  LICENSE  README.md
assets/: icon.xcf
glad/include/glad/: glad.h
glad/src/: glad.c
output/: file.zsc  file0.zsc  scene.ppm  scene.zsc  scene1
src/: aabb.h  ai.h  bvh.h  cam0.h  camera.h  camera0.h  camera1.h  color.h  constant_medium.h  file.h  gui.h  hittable.h  interval.h  main.cpp  main0.cpp  material.h  objects.h  perlin.h  quad.h  ray.h  scene.h  solve.h  sphere.h  texture.h  utility.h  vec3.h
